--- a/application-dev-lb.yml
+++ b/application-dev-lb.yml
@@ -58,7 +58,11 @@ eureka:
   instance:
     prefer-ip-address: true
     hostname: localhost
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 30
   client:
+    healthcheck:
+      enabled: true
     service-url:
       #      defaultZone: http://localhost:8081/eureka
       defaultZone: http://119.45.50.7:8081/eureka,http://119.45.50.7:8082/eureka
