--- a/application-dev.yml
+++ b/application-dev.yml
@@ -29,7 +29,7 @@ spring:
       ribbon:
         enabled: false
   redis:
-    host: 127.0.0.1
+    host: localhost
     port: 6379
     password: Zty&&1212
     database: 1
