--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,6 +1,6 @@
 server:
   port: 8083
-  context-path: /cloud
+  context-path: cloud
 
 spring:
   application:
@@ -30,7 +30,7 @@ spring:
       ribbon:
         enabled: false
   redis:
-    host: 10.206.0.14
+    host: 119.45.50.7
     port: 6379
     password: Zty&&1212
     database: 1
