--- a/application-consumer-dev.yml
+++ b/application-consumer-dev.yml
@@ -12,20 +12,6 @@ eureka:
     service-url:
       defaultZone: http://119.45.50.7:8081/eureka,http://119.45.50.7:8082/eureka
 
-
-#hystrix:
-#  threadpool:
-#    default:
-#      coreSize: 1000 ##²¢·¢Ö´ĞĞµÄ×î´óÏß³ÌÊı£¬Ä¬ÈÏ10
-#      maxQueueSize: 1000 ##BlockingQueueµÄ×î´ó¶ÓÁĞÊı
-#      queueSizeRejectionThreshold: 500 ##¼´Ê¹maxQueueSizeÃ»ÓĞ´ïµ½£¬´ïµ½queueSizeRejectionThreshold¸ÃÖµºó£¬ÇëÇóÒ²»á±»¾Ü¾ø
-#  command:
-#    default:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 110000
-
 feign:
   hystrix:
-    enabled: true # ¿ªÆôÈÛ¶Ï»úÖÆ
+    enabled: true # å¼€å¯ç†”æ–­æœºåˆ¶
