修改网关配置

--- a/application-dev.yml
+++ b/application-dev.yml
@@ -6,12 +6,6 @@ spring:
   application:
     name: gateway
   cloud:
-    config:
-      label: master  #指定仓库分支
-      profile: dev   #指定版本 本例中建立了dev 和 prod两个版本
-      discovery:
-        enabled: true  # 开启
-        service-id: CONFIG-SERVER # 指定配置中心服务端的server-id
     gateway:
       discovery:
         locator:
@@ -26,9 +20,9 @@ spring:
 #        - Path=/api/**
 #        filters:
 #        - StripPrefix=1
-    loadbalancer:
-      ribbon:
-        enabled: false
+#    loadbalancer:
+#      ribbon:
+#        enabled: false
   redis:
     host: 119.45.50.7
     port: 6379
