--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,3 +1,14 @@
+#apollo:
+#  meta: http://119.45.50.7:8099
+#  bootstrap:
+#    enabled: true
+#    eagerLoad:
+#      enabled: true
+#    namespaces: application
+#
+#app:
+#  id: 20200806
+
 server:
   port: 8083
   context-path: /cloud
@@ -13,21 +24,22 @@ spring:
           enabled: true
       loadbalancer:
         use404: true # 路径不匹配返回404 默认503
-#      routes:
-#      - id: cloud-consumer-s
-#        uri: lb://CONSUMER
-#        predicates:
-#        - Path=/api/**
-#        filters:
-#        - StripPrefix=1
+    #      routes:
+    #      - id: cloud-consumer-s
+    #        uri: lb://CONSUMER
+    #        predicates:
+    #        - Path=/api/**
+    #        filters:
+    #        - StripPrefix=1
 #    loadbalancer:
 #      ribbon:
 #        enabled: false
-  redis:
-    host: 119.45.50.7
-    port: 6379
-    password: Zty&&1212
-    database: 1
+#  redis:
+#    host: ${spring.redis.host}
+#    host: 119.45.50.7
+#    port: 6379
+#    password: Zty&&1212
+#    database: 1
 #      globalcors:
 #        corsConfigurations:
 #          '[/**]':
@@ -38,7 +50,11 @@ spring:
 #              POST
 #              DELETE
 #              PUT
-
+  redis:
+    host: 10.206.0.14
+    port: 6379
+    password: Zty&&1212
+    database: 1
 eureka:
   instance:
     prefer-ip-address: true
@@ -49,6 +65,7 @@ eureka:
     healthcheck:
       enabled: true
     service-url:
+      #      defaultZone: http://localhost:8081/eureka
       defaultZone: http://119.45.50.7:8081/eureka,http://119.45.50.7:8082/eureka
 
 #CONSUMER:
