--- a/application-consumer-prod.yml
+++ b/application-consumer-prod.yml
@@ -8,10 +8,14 @@ spring:
 eureka:
   instance:
     hostname: localhost
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 30
   client:
     service-url:
       defaultZone: http://119.45.50.7:8081/eureka,http://119.45.50.7:8082/eureka
-
+    healthcheck:
+      enabled: true
+      
 #hystrix:
 #  threadpool:
 #    default:
