--- a/application-consumer-dev.yml
+++ b/application-consumer-dev.yml
@@ -8,7 +8,11 @@ spring:
 eureka:
   instance:
     hostname: localhost
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 30
   client:
+    healthcheck:
+      enabled: true
     service-url:
       defaultZone: http://119.45.50.7:8081/eureka,http://119.45.50.7:8082/eureka
 
