--- a/application-productor-prod.yml
+++ b/application-productor-prod.yml
@@ -15,7 +15,13 @@ ribbon:
   OkToRetryOnAllOperations: false
 
 eureka:
+  instance:
+    hostname: localhost
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 30
   client:
+    healthcheck:
+      enabled: true
     service-url:
 #      defaultZone: http://localhost:8081/eureka
       defaultZone: http://119.45.50.7:8081/eureka,http://119.45.50.7:8082/eureka
