--- a/application-consumer-dev.yml
+++ b/application-consumer-dev.yml
@@ -19,3 +19,12 @@ eureka:
 feign:
   hystrix:
     enabled: true # 开启熔断机制
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS    
